| Summary: | ASTERISK-29336: documentation: Fix inconsistent support levels | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2021-03-10 04:46:53.000-0600 | Date Closed: | 2021-03-16 10:26:24 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | 16.16.2 18.2.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Some modules do not have support levels in their module definitions that match the XML documentation. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-03-16 10:26:26.433-0500 Change 15622 merged by George Joseph: documentation: Fix non-matching module support levels. [https://gerrit.asterisk.org/c/asterisk/+/15622|https://gerrit.asterisk.org/c/asterisk/+/15622] By: Friendly Automation (friendly-automation) 2021-03-16 10:26:47.996-0500 Change 15612 merged by George Joseph: documentation: Fix non-matching module support levels. [https://gerrit.asterisk.org/c/asterisk/+/15612|https://gerrit.asterisk.org/c/asterisk/+/15612] By: Friendly Automation (friendly-automation) 2021-03-16 11:04:48.142-0500 Change 15611 merged by George Joseph: documentation: Fix non-matching module support levels. [https://gerrit.asterisk.org/c/asterisk/+/15611|https://gerrit.asterisk.org/c/asterisk/+/15611] | ||